them tinh nang tim kiem nâng cao

--- a/src/css/user-login.css
+++ b/src/css/user-login.css
@@ -534,7 +534,7 @@ footer {
   display: block;
   overflow: hidden;
   position: relative;
-  background-image: url("../img/LAST_HOME.jpg");
+  background-image: url("../../assets/images/LAST_HOME.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   margin-left: auto;
