--- a/src/css/hoan-tat.css
+++ b/src/css/hoan-tat.css
@@ -502,6 +502,10 @@ footer {
     display: none !important;
   }
 
+  .search-group {
+    display: none;
+  }
+
   .nav,
   .section,
   .menu-option {
