--- a/src/css/phan-loai.css
+++ b/src/css/phan-loai.css
@@ -693,6 +693,10 @@ footer {
     display: none;
   }
 
+  .search-group {
+    display: none;
+  }
+
   .search-group button {
     display: none !important;
   }
