--- a/src/css/user-login.css
+++ b/src/css/user-login.css
@@ -622,6 +622,10 @@ footer {
     display: none;
   }
 
+  .search-group {
+    display: none;
+  }
+
   .search-group button {
     display: none !important;
   }
