--- a/src/css/san-pham.css
+++ b/src/css/san-pham.css
@@ -527,6 +527,10 @@ footer {
     display: none;
   }
 
+  .search-group {
+    display: none;
+  }
+
   .search-group button {
     display: none !important;
   }
