--- a/src/css/user-register.css
+++ b/src/css/user-register.css
@@ -607,6 +607,10 @@ footer {
     display: none;
   }
 
+  .search-group {
+    display: none;
+  }
+
   .search-group button {
     display: none !important;
   }
