--- a/assets/components/pages-components/header.html
+++ b/assets/components/pages-components/header.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- CSS  -->
-    <link rel="stylesheet" type="text/css" href="./src/css/trang-chu.css" />
-    <script src="./src/js/trang-chu-02.js"></script>
+    <link rel="stylesheet" href="../css-components/header.css" />
     <link
       rel="stylesheet"
-      href="./assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
+      href="../../libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="assets/icon/fontawesome-free-6.7.2-web/css/all.min.css"
-    />
-    <link rel="stylesheet" href="./src/css/searchAdvanceMobile.css" />
     <!-- JS  -->
-    <script src="./assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/main.js"></script>
-    <script src="./src/js/onOffSeacrhAdvance.js"></script>
-    <title>Trang Chủ</title>
-
-    <!-- AVCCVSA -->
+    <script src="../../libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../../src/js/main.js"></script>
+    <title>Document</title>
   </head>
-
   <body>
     <div class="Sticky">
       <div class="container-fluid" style="padding: 0 !important">
@@ -79,10 +68,7 @@
                   </div>
 
                   <!-- Panel tìm kiếm nâng cao  -->
-                  <div
-                    class="search-filter-container"
-                    id="search-filter-container"
-                  >
+                  <div class="search-filter-container">
                     <div class="filter-group">
                       <label for="categoryFilter">
                         <i class="fas fa-leaf"></i> Phân loại sản phẩm
@@ -195,121 +181,19 @@
                     </button>
                   </div>
 
-                  <div class="product" data-category="cay-de-cham">
-                    <img src="./assets/images/CAY5.jpg" alt="Cây phát tài" />
-                    <div class="p-details">
-                      <h2>Cây phát tài</h2>
-                      <h3>750.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <!-- OK  -->
-                  <div class="product" data-category="cay-van-phong">
-                    <img src="./assets/images/CAY6.jpg" alt="Cây kim ngân" />
-                    <div class="p-details">
-                      <h2>Cây kim ngân</h2>
-                      <h3>280.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY7.jpg" alt="Cây trầu bà" />
-                    <div class="p-details">
-                      <h2>Cây trầu bà</h2>
-                      <h3>120.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-duoi-nuoc">
-                    <img src="./assets/images/CAY8.jpg" alt="Cây lan chi" />
-                    <div class="p-details">
-                      <h2>Cây lan chi</h2>
-                      <h3>120.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY9.jpg" alt="Cây trầu bà đỏ" />
-                    <div class="p-details">
-                      <h2>Cây trầu bà đỏ</h2>
-                      <h3>320.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY10.jpg" alt="Cây lưỡi hổ" />
-                    <div class="p-details">
-                      <h2>Cây lưỡi hổ</h2>
-                      <h3>750.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img
-                      src="./assets/images/CAY11.jpg"
-                      alt="Cây lưỡi hổ vàng"
-                    />
-                    <div class="p-details">
-                      <h2>Cây lưỡi hổ vàng</h2>
-                      <h3>160.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY12.jpg" alt="Cây hạnh phúc" />
-                    <div class="p-details">
-                      <h2>Cây hạnh phúc</h2>
-                      <h3>1.200.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img
-                      src="./assets/images/CAY13.jpg"
-                      alt="Cây trầu bà châu lớn"
-                    />
-                    <div class="p-details">
-                      <h2>Cây trầu bà châu lớn</h2>
-                      <h3>1.100.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-van-phong">
-                    <img
-                      src="./assets/images/CAY14.jpg"
-                      alt="Cây phát tài DORADO"
-                    />
-                    <div class="p-details">
-                      <h2>Cây phát tài DORADO</h2>
-                      <h3>220.000 vnđ</h3>
-                    </div>
-                  </div>
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY16.jpg" alt="Cây vạn lộc" />
-                    <div class="p-details">
-                      <h2>Cây vạn lộc</h2>
-                      <h3>1.150.000 vnđ</h3>
-                    </div>
-                  </div>
-
-                  <div class="product" data-category="cay-de-ban">
-                    <img src="./assets/images/CAY17.jpg" alt="Cây ngọc vừng" />
-                    <div class="p-details">
-                      <h2>Cây ngọc vừng</h2>
-                      <h3>1.750.000 vnđ</h3>
-                    </div>
-                  </div>
+                  <!-- Danh sách sản phẩm tìm kiếm -->
+                  <!-- ... existing code ... -->
                 </div>
               </div>
 
               <div class="cart-icon">
                 <a href="./pages/gio-hang.html"
-                  ><img src="./assets/images/cart.svg" alt="cart"
+                  ><img src="../../images/cart.svg" alt="cart"
                 /></a>
               </div>
               <div class="user-icon">
                 <label for="tick" style="cursor: pointer"
-                  ><img src="./assets/images/user.svg" alt=""
+                  ><img src="../../images/user.svg" alt=""
                 /></label>
                 <input
                   id="tick"
@@ -496,13 +380,13 @@
                   </form>
                   <div
                     id="search-filter-container-mobile"
-                    class="search-filter-container-mobile"
+                    class="search-filter-container"
                   >
                     <div class="filter-group">
-                      <label for="categoryFilter-mobile">
+                      <label for="categoryFilter">
                         <i class="fas fa-leaf"></i> Phân loại sản phẩm
                       </label>
-                      <select id="categoryFilter-mobile" class="form-select">
+                      <select id="categoryFilter" class="form-select">
                         <option value="">Tất cả phân loại</option>
                         <option value="cay-de-cham">Cây dễ chăm</option>
                         <option value="cay-van-phong">Cây văn phòng</option>
@@ -535,28 +419,28 @@
                           <button
                             type="button"
                             class="price-preset"
-                            onclick="setPriceMobile(0, 200000)"
+                            onclick="setPrice(0, 200000)"
                           >
                             Dưới 200k
                           </button>
                           <button
                             type="button"
                             class="price-preset"
-                            onclick="setPriceMobile(200000, 500000)"
+                            onclick="setPrice(200000, 500000)"
                           >
                             200k - 500k
                           </button>
                           <button
                             type="button"
                             class="price-preset"
-                            onclick="setPriceMobile(500000, 1000000)"
+                            onclick="setPrice(500000, 1000000)"
                           >
                             500k - 1tr
                           </button>
                           <button
                             type="button"
                             class="price-preset"
-                            onclick="setPriceMobile(1000000, 0)"
+                            onclick="setPrice(1000000, 0)"
                           >
                             Trên 1tr
                           </button>
@@ -568,7 +452,7 @@
                       <button
                         type="button"
                         class="btn-search"
-                        onclick="performSearchMobile()"
+                        onclick="performSearch()"
                       >
                         <i class="fas fa-search"></i> Tìm kiếm
                       </button>
@@ -594,10 +478,7 @@
           <div class="brand-logo">
             <!-- Quay về trang chủ  -->
             <a href="index.html"
-              ><img
-                class="img-fluid"
-                src="./assets/images/LOGO-2.png"
-                alt="LOGO"
+              ><img class="img-fluid" src="../../images/LOGO-2.png" alt="LOGO"
             /></a>
           </div>
           <div class="brand-name">THE TREE</div>
@@ -649,270 +530,5 @@
         </div>
       </div>
     </div>
-
-    <!-- SECTION  -->
-    <div class="section">
-      <div class="img-21">
-        <img src="./assets/images/CAY21.jpg" alt="CAY21" />
-      </div>
-    </div>
-
-    <main>
-      <!-- DANH MUC SAN PHAM -->
-      <section id="container_1" class="class">
-        <h2 class="font_size">DANH MỤC SẢN PHẨM</h2>
-
-        <!-- Anh -->
-        <div
-          class="IMG"
-          onclick="window.location.href='./pages/phan-loai1.html';"
-        >
-          <div class="img__TREE">
-            <!-- LINK SẢN PHẨM -->
-
-            <img
-              class="THE-TREE"
-              src="./assets/images/CAY1.PNG"
-              alt="Cây dễ Chăm"
-            />
-            <p class="content_TREE-1">CÂY DỄ CHĂM</p>
-          </div>
-
-          <div class="img__TREE">
-            <img
-              class="THE-TREE"
-              src="./assets/images/CAY18.jpg"
-              alt="CÂY VĂN PHÒNG"
-            />
-            <p class="content_TREE-1">CÂY VĂN PHÒNG</p>
-          </div>
-
-          <div class="img__TREE">
-            <img
-              class="THE-TREE"
-              src="./assets/images/CAY19.jpg"
-              alt="CÂY ĐỂ BÀN"
-            />
-            <p class="content_TREE-1">CÂY ĐỂ BÀN</p>
-          </div>
-
-          <div class="img__TREE">
-            <img
-              class="THE-TREE"
-              src="./assets/images/CAY20.jpg"
-              alt="Cây dễ Chăm"
-            />
-            <p class="content_TREE-1">CÂY DƯỚI NƯỚC</p>
-          </div>
-        </div>
-      </section>
-
-      <section id="product1" class="section-p1">
-        <!-- SẢN PHẨM MỚI -->
-        <h2 class="font_size">SẢN PHẨM MỚI</h2>
-
-        <div class="pro-container">
-          <div
-            class="pro"
-            onclick="window.location.href='user/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY5.jpg" alt="Cây phát tài" />
-            <div class="item_name__price">
-              <p>CÂY PHÁT TÀI</p>
-              <span>750.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='user/user-san-pham2.html';"
-          >
-            <img src="./assets/images/CAY6.jpg" alt="CÂY KIM NGÂN" />
-            <div class="item_name__price">
-              <p>CÂY KIM NGÂN</p>
-              <span>280.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='user/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY7.jpg" alt="CÂY TRẦU BÀ" />
-            <div class="item_name__price">
-              <p>CÂY TRẦU BÀ</p>
-              <span>120.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='user/user-san-pham2.html';"
-          >
-            <img src="./assets/images/CAY8.jpg" alt="CÂY LAN CHI" />
-            <div class="item_name__price">
-              <p>CÂY LAN CHI</p>
-              <span>120.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='user/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY9.jpg" alt="ÂY TRẦU BÀ ĐỎ" />
-            <div class="item_name__price">
-              <p>CÂY TRẦU BÀ ĐỎ</p>
-              <span>320.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/phan-loai2.html';"
-          >
-            <img src="./assets/images/CAY10.jpg" alt="CÂY PHÁT TÀI" />
-            <div class="item_name__price">
-              <p>CÂY LƯỠI HỔ</p>
-              <span>750.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY11.jpg" alt="CÂY LƯỠI HỔ VÀNG" />
-            <div class="item_name__price">
-              <p>CÂY LƯỠI HỔ VÀNG</p>
-              <span>160.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham2.html';"
-          >
-            <img src="./assets/images/CAY12.jpg" alt="CÂY PHẠNH PHÚC" />
-            <div class="item_name__price">
-              <p>CÂY HẠNH PHÚC</p>
-              <span>1.200.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY13.jpg" alt="CÂY TRẦU BÀ CHẬU LỚN" />
-            <div class="item_name__price">
-              <p>CÂY TRẦU BÀ CHẬU LỚN</p>
-              <span>1.100.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham2.html';"
-          >
-            <img src="./assets/images/CAY14.jpg" alt="CÂY PHÁT TÀI DORADO" />
-            <div class="item_name__price">
-              <p>CÂY PHÁT TÀI DORADO</p>
-              <span>220.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham1.html';"
-          >
-            <img src="./assets/images/CAY16.jpg" alt="CÂY VẠN LỘC" />
-            <div class="item_name__price">
-              <p>CÂY VẠN LỘC</p>
-              <span>1.150.000 vnđ</span>
-            </div>
-          </div>
-
-          <div
-            class="pro"
-            onclick="window.location.href='./pages/user-san-pham2.html';"
-          >
-            <img src="./assets/images/CAY17.jpg" alt="CÂY NGỌC VỪNG" />
-            <div class="item_name__price">
-              <p>CÂY NGỌC VỪNG</p>
-              <span>1.750.000 vnđ</span>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="col-01">
-        <div class="row-1">
-          <img src="./assets/images/LOGO-2.png" alt="Logo final" />
-        </div>
-
-        <div class="row-2">
-          <hr />
-        </div>
-
-        <div class="row-3">
-          <div class="text-wrapper">
-            <span style="font-size: 32px; color: white"
-              ><strong>THE TREE</strong></span
-            ><span
-              class="text-wrap-1"
-              style="color: white; font-size: 25px; text-align: justify"
-            >
-              mong mang đến không gian sống xanh, như là một cách để khơi nguồn
-              cảm hứng, cải thiện chất lượng tinh thần tươi và đồng thời còn
-              mang lại tính thẩm mỹ cho không gian nội thất.</span
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="col-02">
-        <div class="col-2-row-1">
-          <div class="text-wrapper-2">
-            <p style="color: white; font-size: 31px">CÁC TRANG MẠNG XÃ HỘI</p>
-          </div>
-
-          <div class="icon-socialnet">
-            <img src="./assets/images/facebook.svg" alt="facebook" />
-            <img src="./assets/images/instagram.svg" alt="instagram" />
-            <img src="./assets/images/youtube.svg" alt="youtube" />
-            <img src="./assets/images/mastercard.svg" alt="messenger" />
-            <img src="./assets/images/x-twitter.svg" alt="x" />
-          </div>
-        </div>
-
-        <div class="col-2-row-2">
-          <div class="text-wrapper-3">
-            <div class="text-wrapper-3-1">
-              <p style="color: white; font-size: 31px">
-                PHƯƠNG THỨC THANH TOÁN
-              </p>
-            </div>
-          </div>
-          <div class="icon-socialnet">
-            <img src="./assets/images/paypal.svg" alt="facebook" />
-            <img src="./assets/images/mastercard.svg" alt="instagram" />
-          </div>
-        </div>
-      </div>
-
-      <div class="col-03">
-        <p class="lien-he" style="font-size: 32px">LIÊN HỆ</p>
-        <div class="div">
-          <p style="font-size: 27px">SĐT: 0838 396 969</p>
-          <p style="font-size: 27px">
-            ĐỊA CHỈ: 105 Trần Thị Trọng, phường 15, quận Tân Bình, TP.HCM
-          </p>
-        </div>
-      </div>
-      <!-- xong footer  -->
-    </footer>
   </body>
 </html>
