--- a/src/css/thanh-toan.css
+++ b/src/css/thanh-toan.css
@@ -29,45 +29,63 @@ body {
 }
 
 .dropdown-menu {
-  padding: 20px !important; /* Padding lớn cho menu */
-  border: 1px solid rgba(0, 0, 0, 0.1); /* Viền nhẹ */
-  background-color: #fff; /* Màu nền */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Hiệu ứng bóng */
+  padding: 20px !important;
+  /* Padding lớn cho menu */
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* Viền nhẹ */
+  background-color: #fff;
+  /* Màu nền */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  /* Hiệu ứng bóng */
 }
 
 .dropdown-item {
-  padding: 10px 15px !important; /* Khoảng cách nội dung trong từng mục */
-  margin-bottom: 10px; /* Khoảng cách giữa các mục */
-  border-radius: 10px !important; /* Bo góc nhẹ cho từng item */
+  padding: 10px 15px !important;
+  /* Khoảng cách nội dung trong từng mục */
+  margin-bottom: 10px;
+  /* Khoảng cách giữa các mục */
+  border-radius: 10px !important;
+  /* Bo góc nhẹ cho từng item */
   transition: background-color 0.2s ease, transform 0.2s ease;
-  color: #333; /* Màu chữ */
-  border: none; /* Xóa viền bên trong */
+  color: #333;
+  /* Màu chữ */
+  border: none;
+  /* Xóa viền bên trong */
 }
 
 /* Hiệu ứng hover */
 .dropdown-item:hover {
-  background-color: rgba(144, 238, 144, 0.2); /* Nền xanh nhạt khi hover */
-  transform: scale(1.05); /* Phóng to nhẹ khi hover */
+  background-color: rgba(144, 238, 144, 0.2);
+  /* Nền xanh nhạt khi hover */
+  transform: scale(1.05);
+  /* Phóng to nhẹ khi hover */
   color: #000;
 }
 
 /* STICKY */
 .Sticky {
-  position: -webkit-sticky; /* Để hỗ trợ cho các trình duyệt cũ hơn */
-  position: sticky; /* Dính khi cuộn */
-  top: 0; /* Đặt khoảng cách từ trên cùng của cửa sổ */
-  z-index: 1000; /* Đảm bảo sticky phần tử nằm trên các phần tử khác */
+  position: -webkit-sticky;
+  /* Để hỗ trợ cho các trình duyệt cũ hơn */
+  position: sticky;
+  /* Dính khi cuộn */
+  top: 0;
+  /* Đặt khoảng cách từ trên cùng của cửa sổ */
+  z-index: 1000;
+  /* Đảm bảo sticky phần tử nằm trên các phần tử khác */
 }
 
 .header,
 .nav {
-  background-color: white; /* Đảm bảo có nền để phần tử có thể dính */
-  z-index: 1; /* Đảm bảo chúng hiển thị trên các phần tử dưới */
+  background-color: white;
+  /* Đảm bảo có nền để phần tử có thể dính */
+  z-index: 1;
+  /* Đảm bảo chúng hiển thị trên các phần tử dưới */
 }
 
 /* Kiểm tra overflow cho phần tử cha */
 .Sticky .container-fluid {
-  overflow: visible; /* Đảm bảo không có thuộc tính overflow */
+  overflow: visible;
+  /* Đảm bảo không có thuộc tính overflow */
 }
 
 /*  */
@@ -80,7 +98,8 @@ body {
 
 /* Hiệu ứng hover chỉ thay đổi màu chữ */
 .choose ul li a:hover {
-  color: #1c8e2e; /* Màu xanh lục nhẹ khi hover */
+  color: #1c8e2e;
+  /* Màu xanh lục nhẹ khi hover */
 }
 
 /* HEADER */
@@ -189,13 +208,14 @@ body {
   position: absolute;
   top: 100%;
   background-color: #fff;
-  width: 83%;
+  width: 100%;
   border: 1px solid #ddd;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   max-height: 300px;
   overflow-y: auto;
-  left: 15%;
+  border-radius: 6px;
+
 }
 
 .product-list .product {
@@ -211,8 +231,8 @@ body {
 }
 
 .product-list .product img {
-  width: 45%;
-  height: 30%;
+  width: 21%;
+  height: auto;
   object-fit: cover;
   margin-right: 10px;
 }
@@ -276,153 +296,74 @@ body {
   display: flex;
 }
 
-/* ARTICLE  */
-.article {
+/* main  */
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  margin-top: 1vw;
+  margin-top: 2rem;
 }
 
-.title-cart {
-  margin: 4vw;
-}
-
-.infor-order {
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  height: 100em;
+  justify-content: center;
+  margin-top: 2rem;
   width: 70%;
-  margin-top: -4vw;
+  background-color: #fcfcfc;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  border-radius: 10px;
-}
-
-.infor-order input[type="radio"] {
-  width: 23px;
-}
-
-.enter-infor {
-  width: 70%;
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-.choose-01,
-.choose-02 {
-  gap: 10px;
-  font-size: 24px;
-}
-
-label {
-  display: inline-block;
-  width: auto;
-  /* Đảm bảo kích thước tự động */
-  white-space: nowrap;
-  /* Đảm bảo không có chuyển dòng */
-}
-
-#new-information,
-#default-information {
-  width: 70%;
-  display: flex;
-  align-items: stretch;
-  gap: 3rem;
-}
-
-form input {
-  height: 50px;
-  border-radius: 18px;
-  border: 1px solid #1c8e2e;
-}
-
-.infor-goods {
-  width: 70%;
-}
-
-.enter-infor-02 {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-}
-
-.choose-02-01,
-.choose-02-02 {
-  gap: 5px;
-  font-size: 23px;
-}
-
-.img-icon-pay {
-  display: none !important;
-}
-
-.me-2:checked ~ .img-icon-pay {
-  display: flex;
-  justify-content: start;
-}
-
-.img-icon-pay {
-  width: 70%;
-  gap: 10px;
-}
-
-.infor-for-banking {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  position: relative;
-  margin: 40px 0 0 0;
-  width: 83%;
-  background-color: #dbdbdb;
-  border-radius: 30px;
-  height: 12em;
-  display: none;
-}
-
-.infor-for-banking input {
-  width: 89%;
-  height: 2em;
-  border-radius: 15px;
-  border: 1px solid black;
 }
 
 .status-order {
   display: flex;
-  flex-direction: row;
-  background-color: #99e5a5;
-  width: 70%;
-  height: 8vw;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  gap: 10px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: #99e5a5;
+  height: 4em;
+  border-radius: 2px;
+  width: 70%;
+  height: 7.2em;
+  margin: 3em 0 0 0;
   border-radius: 5px;
 }
 
-.status-order hr {
-  height: 1px;
-  width: 21%;
-  border: 1px dashed black;
+.status-order i {
+  font-size: 2em;
 }
 
-.cart-2 {
-  width: max(30px, 50px);
-  height: 50px;
+.option-address {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin-top: 35px;
 }
 
-.id-01 {
-  filter: invert(20%) sepia(100%) saturate(500%) hue-rotate(90deg);
+.option-address input,
+.option-address label {
+  font-size: 19px;
 }
 
-.infor-order img {
-  width: 40px;
-  align-items: center;
-  text-align: center;
+#default-information-form,
+#new-information-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 2rem;
+  width: 70%;
+  display: none;
+}
+
+#default-information-form input,
+#new-information-form input {
+  border-radius: 5px;
+  border: 1px solid #1c8e2e;
+  width: 30em;
+}
+
+.infor-goods {
+  width: 70%;
 }
 
 .order {
@@ -436,10 +377,6 @@ form input {
 .order-img img {
   width: 7rem;
   height: 7rem;
-}
-
-.order hr {
-  border: 3px dashed green;
 }
 
 .frame {
@@ -467,22 +404,6 @@ form input {
   justify-content: space-between;
 }
 
-.function button {
-  display: flex;
-  width: 70%;
-  align-items: center;
-  justify-content: center;
-}
-
-.icon-trash {
-  filter: invert(34%) sepia(100%) saturate(750%) hue-rotate(0deg);
-}
-
-.icon-trash img {
-  width: max(20px);
-  height: 50px;
-}
-
 .add-del {
   display: flex;
   flex-direction: row;
@@ -491,65 +412,97 @@ form input {
   height: 3rem;
 }
 
-.wrapper {
-  height: 32px;
-  width: 86px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.wrapper span {
-  width: 100%;
-  text-align: center;
-  font-size: 15px;
-  font-weight: 600;
-  cursor: pointer;
-  user-select: none;
-}
-
-.wrapper span.num {
-  font-size: 15px;
-  border-right: 2px solid rgba(0, 0, 0, 0.2);
-  border-left: 2px solid rgba(0, 0, 0, 0.2);
-  pointer-events: none;
-}
-
-.frame-2 {
-  color: red;
-  font-size: clamp(15px, 26px, 33px);
+.payment-method {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   width: 70%;
 }
 
-.dat-hang {
-  width: 100%;
+/* Giao diện nút thêm bớt số lượng sản phẩm  */
+.wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  top: 10rem;
+  gap: 5px;
+  background: #f8f9fa;
+  border-radius: 20px;
+  padding: 5px 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.dat-hang button {
-  width: 200px;
-  height: 70px;
+.num {
+  width: 30px;
+  text-align: center;
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.payment-method input,
+.payment-method label {
+  font-size: 19px;
+}
+
+#banking-form {
+  display: block;
+  background: white;
+  padding: 20px;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  margin-top: 15px;
+  display: none !important;
 }
 
-.text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+h2 {
+  margin-bottom: 15px;
 }
 
-.text a {
+
+#banking-form label {
+  font-weight: bold;
+  display: block;
+  margin-top: 10px;
+}
+
+#banking-form input,
+#banking-form select {
   width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#banking-form input:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.subscribe-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.subscribe-btn:hover {
+  background-color: #0056b3;
+}
+
+/* Loại thẻ  */
+.card-type {
+  width: 70%;
+  font-size: 27px;
+}
+
+.payment-button button {
+  margin-bottom: 10px;
+  margin-top: 15px;
 }
 
 /* FOOTER  */
@@ -625,60 +578,12 @@ footer {
 }
 
 /* PC  */
-@media only screen and (min-width: 1023.98px) {
-  .list-option-user {
-    display: none;
-  }
-
-  .col-lg-2 {
-    flex: 0 0 auto;
-    width: 38.666667%;
-  }
-}
+@media only screen and (min-width: 1023.98px) {}
 
 /* TABLET and MOBILE  */
 @media only screen and (max-width: 768.01px) {
-  .item-header {
-    gap: 20px;
-  }
 
-  .item-header input[type="search"] {
-    display: none;
-  }
-
-  .search-group {
-    display: none;
-  }
-
-  .search-group button {
-    display: none !important;
-  }
-
-  .nav,
-  .section,
-  .menu-option {
-    margin: 0;
-    padding: 0;
-  }
-
-  .choose,
-  .search-icon {
-    display: none;
-  }
-
-  .navbar-toggler {
-    display: block !important;
-    margin-right: 1rem;
-  }
-
-  .offcanvas-body {
-    width: 99%;
-  }
-
-  .status-order {
-    justify-content: center;
-  }
-
+  /* Footer  */
   footer {
     display: flex !important;
     flex-direction: row !important;
@@ -737,52 +642,6 @@ footer {
 
 /* TABLET  */
 @media only screen and (min-width: 425px) and (max-width: 768.01px) {
-  .section img {
-    height: 10em;
-  }
-  .infor-order {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    height: 100em;
-    width: 100%;
-    margin-top: -4vw;
-  }
-
-  .status-order {
-    display: flex;
-    flex-direction: row;
-    background-color: #99e5a5;
-    width: 80%;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
-    margin-top: 4.5vw;
-  }
-
-  #new-information,
-  #default-information,
-  .enter-infor,
-  .infor-goods,
-  .enter-infor-02,
-  .img-icon-pay {
-    width: 80%;
-  }
-
-  .order {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 10rem;
-    align-items: center;
-  }
-
-  .status-order hr {
-    height: 1px;
-    width: 20%;
-    border: 1px dashed black;
-  }
 
   .row-1 {
     margin-top: 2em;
@@ -791,61 +650,8 @@ footer {
 
 /* MOBILE  */
 @media only screen and (max-width: 425.1px) {
-  .section img {
-    height: 6em;
-  }
-  .infor-order {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 95em;
-    width: 100%;
-    margin-top: -4vw;
-  }
 
-  .status-order img {
-    width: 31px;
-    align-items: center;
-    text-align: center;
-  }
-
-  .status-order {
-    display: flex;
-    flex-direction: row;
-    background-color: #99e5a5;
-    width: 97%;
-    height: 83px;
-    align-items: center;
-    justify-content: center;
-    margin-top: 4.5vw;
-  }
-
-  #new-information,
-  #default-information,
-  .enter-infor,
-  .infor-goods,
-  .enter-infor-02,
-  .img-icon-pay {
-    width: 95%;
-  }
-
-  .order {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 10rem;
-    align-items: center;
-  }
-
-  .infor-for-banking {
-    width: 100%;
-    height: 9em;
-  }
-
-  .frame-2 {
-    width: 93%;
-  }
-
+  /* Footer  */
   footer p {
     margin-bottom: 0rem;
   }
