--- a/src/css/thanh-toan.css
+++ b/src/css/thanh-toan.css
@@ -290,10 +290,11 @@ body {
 /* SECTION */
 .section img {
   width: 100%;
-  height: 16em;
+  height: 29vw;
   object-fit: cover;
   object-position: 50% 50%;
   display: flex;
+  position: relative;
 }
 
 /* main  */
@@ -359,7 +360,7 @@ body {
 #new-information-form input {
   border-radius: 5px;
   border: 1px solid #1c8e2e;
-  width: 30em;
+  width: 100%;
 }
 
 .infor-goods {
@@ -412,10 +413,15 @@ body {
   height: 3rem;
 }
 
+
 .payment-method {
   display: flex;
   flex-direction: column;
   width: 70%;
+}
+
+.card-type {
+  display: none;
 }
 
 /* Giao diện nút thêm bớt số lượng sản phẩm  */
@@ -444,14 +450,13 @@ body {
 }
 
 #banking-form {
-  display: block;
+  display: none;
   background: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 400px;
   margin-top: 15px;
-  display: none !important;
 }
 
 h2 {
@@ -461,7 +466,6 @@ h2 {
 
 #banking-form label {
   font-weight: bold;
-  display: block;
   margin-top: 10px;
 }
 
@@ -498,6 +502,11 @@ h2 {
 .card-type {
   width: 70%;
   font-size: 27px;
+}
+
+.payment-button {
+  display: flex;
+  justify-content: center;
 }
 
 .payment-button button {
@@ -583,6 +592,47 @@ footer {
 /* TABLET and MOBILE  */
 @media only screen and (max-width: 768.01px) {
 
+  /* Header  */
+  .item-header {
+    gap: 20px;
+  }
+
+  .search-container {
+    display: none !important;
+  }
+
+  .navbar-toggler {
+    display: block !important;
+  }
+
+  /* Nav  */
+  .choose,
+  .search-icon {
+    display: none;
+  }
+
+  /* Main  */
+  /* Nội dung thanh toán  */
+  .content {
+    width: 100%;
+  }
+
+  .status-order {
+    height: 90px
+  }
+
+  .status-order,
+  .option-address,
+  #new-information-form,
+  #default-information-form,
+  .infor-goods,
+  .payment-method,
+  .card-type,
+  #banking-form,
+  .payment-button {
+    width: 80%;
+  }
+
   /* Footer  */
   footer {
     display: flex !important;
@@ -643,6 +693,12 @@ footer {
 /* TABLET  */
 @media only screen and (min-width: 425px) and (max-width: 768.01px) {
 
+  /* Main  */
+  .content {
+    width: 110%;
+  }
+
+  /* Footer  */
   .row-1 {
     margin-top: 2em;
   }
@@ -650,6 +706,23 @@ footer {
 
 /* MOBILE  */
 @media only screen and (max-width: 425.1px) {
+
+  /* Main  */
+  .content {
+    width: 106%;
+  }
+
+  .status-order,
+  .option-address,
+  #new-information-form,
+  #default-information-form,
+  .infor-goods,
+  .payment-method,
+  .card-type,
+  #banking-form,
+  .payment-button {
+    width: 95%;
+  }
 
   /* Footer  */
   footer p {
