--- a/src/css/hoan-tat.css
+++ b/src/css/hoan-tat.css
@@ -295,7 +295,7 @@ body {
   align-items: center;
 
   height: 41rem;
-  width: 60%;
+  width: 70%;
   margin-top: -4vw;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
@@ -403,7 +403,49 @@ body {
   height: 70px;
   border-radius: 10px;
 }
-
+/* Hoa Don */
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+p {
+  margin: 5px 0;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background: #fff;
+  min-width: 1000px;
+}
+th,
+td {
+  border: 1px solid #ddd !important;
+  padding: 10px;
+  text-align: center;
+}
+th {
+  background-color: #f2f2f2;
+}
+.total {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.btn-back {
+  margin-top: 20px;
+  padding: 7px 15px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  display: block;
+  margin: 10px auto; /* Căn giữa theo chiều ngang */
+}
+.btn-back:hover {
+  background-color: #218838;
+}
 /* FOOTER  */
 footer {
   width: 100%;
@@ -594,6 +636,18 @@ footer {
     justify-content: flex-start;
     align-items: flex-start;
   }
+  /* Hoa DOn */
+  table {
+    min-width: 100%;
+    font-size: 14px;
+  }
+  th,
+  td {
+    padding: 8px;
+  }
+  .invoice-container {
+    padding: 10px;
+  }
 }
 
 /* TABLET  */
@@ -746,5 +800,16 @@ footer {
 
   .noti-thanks {
     width: 95%;
+  }
+  /* Hoa DOn */
+  table {
+    font-size: 12px;
+  }
+  th,
+  td {
+    padding: 6px;
+  }
+  .btn-back {
+    width: 100%;
   }
 }
