--- a/admin/style/accountStyle.css
+++ b/admin/style/accountStyle.css
@@ -18,47 +18,183 @@ body {
   z-index: 100;
   background-color: white;
 }
-.container-1 {
+.main-content {
   display: flex;
-  flex-direction: row;
-  margin-top:100px;
-height:700px;
 
 }
-.container-2 {
-  display: flex;
-  flex-direction: row;
-  margin-top:30px;
-  height:700px;
-}
-.profile-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.1);
-  width: 100%;
-
-  
+.sidebar {
+  width: 30%;
+  padding: 30px;
+  background-color: #fff;
+  border-right: 1px solid #ddd;
+  margin-left: 3rem;
+  text-align: center;
 }
 
-.profile-info h2 {
-  border-bottom: 2px solid #e6e6e6;
-  padding-bottom: 10px;
+.sidebar p {
+  font-size: 13px;
+  margin-bottom: 12px;
+  margin-top: 15px;
+}
+
+.sidebar h1 {
+  font-size: 39px;
+}
+.sidebar button {
+  display:block;
+  margin: 0 auto;
+}
+.add-employee-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  height: 50px;
   margin-bottom: 10px;
-  width: 100%;
-  text-align: center;
 }
 
-.profile-info p {
-  font-size: 18px;
-  line-height: 1.6;
-  width: 100%;
-  margin-top: 10px ;
-  text-align: center;
+.employee-list {
+  width: 70%;
+  padding: 20px;
+  background-color: #fff;
 }
 
-.profile-info img {
+.search-bar input {
+  width: 40%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  position: relative;
+  left: 24rem;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.icon {
+  background-color: #ff22e9;
+  color: white;
   border-radius: 50%;
-  margin-top: 0px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.name {
+  display: block;
+  font-weight: bold;
+  color: #27c62a;
+}
+
+.email {
+  display: block;
+  color: #666;
+}
+
+.delete-btn {
+  background: none;
+  border: none;
+  color: #ff0000;
+  cursor: pointer;
+}
+
+.edit-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #27c62a;
+
+}
+
+.content-area {
+  flex: 1;
+  margin-top: 6rem;
+}
+
+.header-section {
+  background-color: #ffffff;
+  padding: 34px;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 11px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-left {
+  margin-left: 3rem;
+  font-size: 12px;
+  flex-direction: column;
+  display: flex;
+}
+
+.header-left h1 {
+  margin: 0;
+  color: #333;
+}
+
+.header-left p {
+  margin: 5px 0 0;
+  color: #666;
+  font-size: 17px;
+}
+
+.header-right {
+  flex: 1;
+  display: flex;
+  justify-content: right;
+  margin-right: 13rem;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  background-color: #40dafd;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  padding: 10px;
+  padding-right: 150px;
+  gap: 8px;
+}
+
+.user-icon {
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.user-name {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.user-email {
+  color: #666;
+  margin-right: 5px;
+}
+
+.email-icon {
+  color: #4CAF50;
+}
+.fa-plus{
+  border:1px solid white;
+  border-radius: 100%;
+  border-width: 2px;
 }
