--- a/admin/style/header.css
+++ b/admin/style/header.css
@@ -18,10 +18,6 @@
 
     margin-left: 20px;
     
-    /* font-weight: bold;
-    font-family:Arial;
-    width: 500px;
-    margin-left:20px; */
 }
 .header-left-title {
     font-size: 35px;
@@ -77,13 +73,13 @@
       justify-content: end;
       z-index: 1;
      }
-     .header-right-section {
+     /* .header-right-section {
       margin-right: 32px;
       position: relative;
       left: -3px;
       top:15px;
       z-index: 1;
-    }
+    } */
     .header-left-section {
       position: relative;
       left: clamp(49px, 51px, 100px);
